<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2">

        <TextView
            android:layout_columnWeight="0.1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/select_group"/>
        <Spinner
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/groupSpinner"/>
        <Button
            android:text="@string/new_group"
            android:id="@+id/newGroup"
            android:layout_gravity="center"
            android:layout_columnWeight="0"
            android:layout_rowWeight="1"
            android:textSize="14sp"
            />

        <TextView
            android:layout_columnWeight="0.1"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:text="@string/select_person"/>
        <Spinner
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:id="@+id/personSpinner" />
        <Button
            android:text="@string/new_person"
            android:id="@+id/newPerson"
            android:layout_gravity="center"
            android:layout_columnWeight="0"
            android:layout_rowWeight="1"
            android:textSize="14sp"
            />
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/capture"
        android:text="@string/capture_image"/>

    <ImageView
        android:contentDescription="@string/preview_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/preview"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadImage"
            android:layout_gravity="center"
            android:text="@string/upload"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/train"
            android:layout_gravity="center"
            android:text="@string/train"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/train_status"
            android:layout_gravity="center"
            android:text="@string/training_status"/>

    </LinearLayout>


</LinearLayout>